# aion

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml
.github/: copilot-instructions.md.license
.github/workflows/: ci.yml  release.yml
cmake/: Sanitizers.cmake
src/: aion_control_thread.hpp  main.cpp  routing_matrix.hpp  version.cpp
tests/: test_midi_diag.cpp  test_routing_matrix.cpp
